ingress/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: default
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
